tests/baselines/reference/indexedAccessRelation2.errors.txt
tests/cases/compiler/indexedAccessRelation2.ts(4,9): error TS2322: Type 'keyof T' is not assignable to type 'K'.
tests/cases/compiler/indexedAccessRelation2.ts(5,9): error TS2322: Type 'T[keyof T]' is not assignable to type 'T[K]'.


==== tests/cases/compiler/indexedAccessRelation2.ts (2 errors) ====
    // Repro from #17166
    function f<T, K extends keyof T>(obj: T, k: K, value: T[K]): void {
        for (let key in obj) {
            k = key // error, keyof T =/=> K
            ~
!!! error TS2322: Type 'keyof T' is not assignable to type 'K'.
            value = obj[key]; // error, T[keyof T] =/=> T[K]
            ~~~~~
!!! error TS2322: Type 'T[keyof T]' is not assignable to type 'T[K]'.
        }
    }
    
    